Fix contrast for number in heading

--- a/css/default.css
+++ b/css/default.css
@@ -195,7 +195,7 @@ header {
 }
 
 .section-heading-number {
-	color: hsla(0, 0%, 100%, 30%);
+	color: hsla(0, 0%, 100%, 45%);
 }
 
 .section-images {
